--- a/info-mapper/src/styles.css
+++ b/info-mapper/src/styles.css
@@ -5,3 +5,5 @@ body{
     background-color: #fafafa;
     font-family: Trebuchet MS,Helvetica,sans-serif!important;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
