--- a/info-mapper/src/app/nav-bar/tab/tab.component.html
+++ b/info-mapper/src/app/nav-bar/tab/tab.component.html
@@ -7,9 +7,8 @@
       <div *ngFor="let menu of data.menus;">
         <div *ngIf="menu.action=='externalLink' && menu.enabled=='true'; else internalLink">
           <li class="nav-item activate .ml-auto">
-            <a class="dropdown-item" href="{{menu.url}}" target="_blank"><img src="assets/app-default/img/baseline-open_in_new-24px.svg"/>
+            <a matTooltip="{{menu.tooltip}}" class="dropdown-item" href="{{menu.url}}" target="_blank"><img src="assets/app-default/img/baseline-open_in_new-24px.svg"/>
               {{menu.name}}
-              <div class="tooltiptext">{{menu.tooltip}}</div>
             </a>
             <div class="dropdown-divider"></div>
           </li>
@@ -28,7 +27,8 @@
         <ng-template #internalLink>
           <div *ngIf="menu.action=='displayMap' && menu.enabled=='true'; else internalPage">
             <li class="nav-item activate .ml-auto">
-              <a mat-raised-button matTooltip="test" class="dropdown-item" routerLink="/map/{{menu.id}}"><img src="assets/app-default/img/baseline-map-24px.svg"/>
+              <div class="dropdown-divider"></div>
+              <a matTooltip="{{menu.tooltip}}" class="dropdown-item" routerLink="/map/{{menu.id}}"><img src="assets/app-default/img/baseline-map-24px.svg"/>
                 {{menu.name}}
               </a>
               <div class="dropdown-divider"></div>
@@ -37,9 +37,8 @@
           <ng-template #internalPage>
             <div *ngIf="menu.enabled=='true'">
               <li class="nav-item activate .ml-auto">
-                <a class="dropdown-item" routerLink="/content-page/{{menu.id}}">
+                <a matTooltip="{{menu.tooltip}}" class="dropdown-item" routerLink="/content-page/{{menu.id}}">
                   {{menu.name}}
-                  <div class="tooltiptext">{{menu.tooltip}}</div>
                 </a>
                 <div class="dropdown-divider"></div>
               </li>
@@ -50,17 +49,18 @@
     </div>
   </li>
 </div>
+
 <ng-template #simpleTab>
   <div *ngIf="data.action == 'contentPage'; else simpleMapTab">
     <li class="nav-item activate .ml-auto">
-      <a class="nav-link" routerLink="/content-page/{{data.id}}">
+      <a matTooltip="{{data.tooltip}}" class="nav-link" routerLink="/content-page/{{data.id}}">
         {{data.name}}
       </a>
     </li>
   </div>
   <ng-template #simpleMapTab>
     <li class="nav-item activate .ml-auto">
-      <a class="nav-link" routerLink="/map/{{data.id}}">
+      <a matTooltip="{{data.tooltip}}" class="nav-link" routerLink="/map/{{data.id}}">
         {{data.name}}
       </a>
     </li>
