Added the property option of visible and changed enabled property

--- a/info-mapper/src/app/nav-bar/tab/tab.component.css
+++ b/info-mapper/src/app/nav-bar/tab/tab.component.css
@@ -23,3 +23,11 @@ img {
   margin-bottom: 0%;
   margin-top: 0%;
 }
+
+.nav-item-not-enabled {
+  background-color: #b4b3b3;
+}
+
+a.dropdown-item-not-enabled {
+  background-color: #b4b3b3;
+}
