--- a/info-mapper/src/app/nav-bar/tab/tab.component.html
+++ b/info-mapper/src/app/nav-bar/tab/tab.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="data.menus; else simpleTab" class="dropdown">
+<div *ngIf="data.menus; else simpleContentTab" class="dropdown">
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown">
       {{data.name}}
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <div *ngFor="let menu of data.menus;">
-        <div *ngIf="menu.action=='externalLink' && menu.enabled=='true'; else internalLink">
+        <div *ngIf="menu.action=='externalLink' && menu.visible!='false' && (menu.enabled=='true' || menu.enabled==undefined); else externalLinkNotEnabled">
           <li class="nav-item activate .ml-auto">
             <a matTooltip="{{menu.tooltip}}" class="dropdown-item" href="{{menu.url}}" target="_blank"><img src="assets/app-default/img/baseline-open_in_new-24px.svg"/>
               {{menu.name}}
@@ -13,36 +13,56 @@
             <div class="dropdown-divider"></div>
           </li>
         </div>
-        <!-- <ng-template #notEnabled>
-          <div *ngIf="menu.action=='externalLink' && menu.enabled=='true'; else internalLink">
-            <li class="nav-item activate .ml-auto">
-              <a class="dropdown-item" href="{{menu.url}}" target="_blank"><img src="assets/app-default/img/baseline-open_in_new-24px.svg"/>
-                {{menu.name}}
-                <div class="tooltiptext">{{menu.tooltip}}</div>
-              </a>
-              <div class="dropdown-divider"></div>
-            </li>
-          </div>
-        </ng-template> -->
-        <ng-template #internalLink>
-          <div *ngIf="menu.action=='displayMap' && menu.enabled=='true'; else internalPage">
-            <li class="nav-item activate .ml-auto">
-              <div class="dropdown-divider"></div>
-              <a matTooltip="{{menu.tooltip}}" class="dropdown-item" routerLink="/map/{{menu.id}}"><img src="assets/app-default/img/baseline-map-24px.svg"/>
+        <ng-template #externalLinkNotEnabled>
+          <div *ngIf="menu.action=='externalLink' && menu.visible!='false' && menu.enabled=='false'; else internalLink">
+            <li class="nav-item-not-enabled activate .ml-auto">
+              <a matTooltip="{{menu.tooltip}}" class="dropdown-item"><img src="assets/app-default/img/baseline-open_in_new-24px.svg"/>
                 {{menu.name}}
               </a>
               <div class="dropdown-divider"></div>
             </li>
           </div>
-          <ng-template #internalPage>
-            <div *ngIf="menu.enabled=='true'">
+          <ng-template #internalLink>
+            <div *ngIf="menu.action=='displayMap' && menu.visible!='false' && (menu.enabled=='true' || menu.enabled==undefined); else internalLinkNotEnabled">
               <li class="nav-item activate .ml-auto">
-                <a matTooltip="{{menu.tooltip}}" class="dropdown-item" routerLink="/content-page/{{menu.id}}">
+                <div class="dropdown-divider"></div>
+                <a matTooltip="{{menu.tooltip}}" class="dropdown-item" routerLink="/map/{{menu.id}}"><img src="assets/app-default/img/baseline-map-24px.svg"/>
                   {{menu.name}}
                 </a>
                 <div class="dropdown-divider"></div>
               </li>
             </div>
+            <ng-template #internalLinkNotEnabled>
+              <div *ngIf="menu.action=='displayMap' && menu.visible!='false' && menu.enabled=='false'; else internalPage">
+                <li class="nav-item-not-enabled activate .ml-auto">
+                  <div class="dropdown-divider"></div>
+                  <a matTooltip="{{menu.tooltip}}" class="dropdown-item"><img src="assets/app-default/img/baseline-map-24px.svg"/>
+                    {{menu.name}}
+                  </a>
+                  <div class="dropdown-divider"></div>
+                </li>
+              </div>
+              <ng-template #internalPage>
+                <div *ngIf="(menu.enabled=='true' || menu.enabled==undefined) && menu.visible!='false'; else internalPageNotEnabled">
+                  <li class="nav-item activate .ml-auto">
+                    <a matTooltip="{{menu.tooltip}}" class="dropdown-item" routerLink="/content-page/{{menu.id}}">
+                      {{menu.name}}
+                    </a>
+                    <div class="dropdown-divider"></div>
+                  </li>
+                </div>
+                <ng-template #internalPageNotEnabled>
+                  <div *ngIf="menu.enabled=='false' && menu.visible!='false'">
+                    <li class="nav-item-not-enabled activate .ml-auto">
+                      <a matTooltip="{{menu.tooltip}}" class="dropdown-item">
+                        {{menu.name}}
+                      </a>
+                      <div class="dropdown-divider"></div>
+                    </li>
+                  </div>
+                </ng-template>
+              </ng-template>
+            </ng-template>
           </ng-template>
         </ng-template>
       </div>
@@ -50,19 +70,39 @@
   </li>
 </div>
 
-<ng-template #simpleTab>
-  <div *ngIf="data.action == 'contentPage'; else simpleMapTab">
+<ng-template #simpleContentTab>
+  <div *ngIf="data.action=='contentPage' && data.visible!='false' && (data.enabled=='true' || data.enabled==undefined); else simpleContentTabNotEnabled">
     <li class="nav-item activate .ml-auto">
       <a matTooltip="{{data.tooltip}}" class="nav-link" routerLink="/content-page/{{data.id}}">
         {{data.name}}
       </a>
     </li>
   </div>
-  <ng-template #simpleMapTab>
-    <li class="nav-item activate .ml-auto">
-      <a matTooltip="{{data.tooltip}}" class="nav-link" routerLink="/map/{{data.id}}">
-        {{data.name}}
-      </a>
-    </li>
+  <ng-template #simpleContentTabNotEnabled>
+    <div *ngIf="data.action=='contentPage' && data.visible!='false' && data.enabled=='false'; else simpleMapTab">
+      <li class="nav-item-not-enabled activate .ml-auto">
+        <a matTooltip="{{data.tooltip}}" class="nav-link">
+          {{data.name}}
+        </a>
+      </li>
+    </div>
+    <ng-template #simpleMapTab>
+      <div *ngIf="data.action=='displayMap' && data.visible!='false' && (data.enabled=='true' || data.enabled==undefined); else simpleMapTabNotEnabled">
+      <li class="nav-item activate .ml-auto">
+        <a matTooltip="{{data.tooltip}}" class="nav-link" routerLink="/map/{{data.id}}">
+          {{data.name}}
+        </a>
+      </li>
+      </div>
+      <ng-template #simpleMapTabNotEnabled>
+        <div *ngIf="data.action=='displayMap' && data.visible!='false' && data.enabled=='false'; else simpleMapTabNotEnabled">
+          <li class="nav-item-not-enabled activate .ml-auto">
+            <a matTooltip="{{data.tooltip}}" class="nav-link">
+              {{data.name}}
+            </a>
+          </li>
+          </div>
+      </ng-template>
+    </ng-template>
   </ng-template>
 </ng-template>
