Fixed some small map bugs

--- a/info-mapper/src/app/content-page/content-page.component.css
+++ b/info-mapper/src/app/content-page/content-page.component.css
@@ -1,4 +1,9 @@
 .container{
-    margin-top:50px !important;
-    height:100vh;
+  margin-top:50px !important;
+  height:100vh;
+}
+
+#markdown-div {
+  height: 90%;
+  overflow: auto;
 }
