--- a/info-mapper/src/app/nav-bar/tab/tab.component.html
+++ b/info-mapper/src/app/nav-bar/tab/tab.component.html
@@ -1,13 +1,13 @@
 <div *ngIf="data.menus; else simpleContentTab" class="dropdown">
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown">
+    <a matTooltip="{{data.tooltip}}" matTooltipPosition="left" class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown">
       {{data.name}}
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <div *ngFor="let menu of data.menus;">
         <div *ngIf="menu.action=='externalLink' && menu.visible!='false' && (menu.enabled=='true' || menu.enabled==undefined); else externalLinkNotEnabled">
           <li class="nav-item activate .ml-auto">
-            <a matTooltip="{{menu.tooltip}}" class="dropdown-item" href="{{menu.url}}" target="_blank"><img src="assets/app-default/img/baseline-open_in_new-24px.svg"/>
+            <a matTooltip="{{menu.tooltip}}" matTooltipPosition="after" class="dropdown-item" href="{{menu.url}}" target="_blank"><img src="assets/app-default/img/baseline-open_in_new-24px.svg"/>
               {{menu.name}}
             </a>
             <div class="dropdown-divider"></div>
@@ -16,7 +16,7 @@
         <ng-template #externalLinkNotEnabled>
           <div *ngIf="menu.action=='externalLink' && menu.visible!='false' && menu.enabled=='false'; else internalLink">
             <li class="nav-item-not-enabled activate .ml-auto">
-              <a matTooltip="{{menu.tooltip}}" class="dropdown-item"><img src="assets/app-default/img/baseline-open_in_new-24px.svg"/>
+              <a matTooltip="{{menu.tooltip}}" matTooltipPosition="after" class="dropdown-item"><img src="assets/app-default/img/baseline-open_in_new-24px.svg"/>
                 {{menu.name}}
               </a>
               <div class="dropdown-divider"></div>
@@ -26,7 +26,7 @@
             <div *ngIf="menu.action=='displayMap' && menu.visible!='false' && (menu.enabled=='true' || menu.enabled==undefined); else internalLinkNotEnabled">
               <li class="nav-item activate .ml-auto">
                 <div class="dropdown-divider"></div>
-                <a matTooltip="{{menu.tooltip}}" class="dropdown-item" routerLink="/map/{{menu.id}}"><img src="assets/app-default/img/baseline-map-24px.svg"/>
+                <a matTooltip="{{menu.tooltip}}" matTooltipPosition="after" class="dropdown-item" routerLink="/map/{{menu.id}}"><img src="assets/app-default/img/baseline-map-24px.svg"/>
                   {{menu.name}}
                 </a>
                 <div class="dropdown-divider"></div>
@@ -36,7 +36,7 @@
               <div *ngIf="menu.action=='displayMap' && menu.visible!='false' && menu.enabled=='false'; else internalPage">
                 <li class="nav-item-not-enabled activate .ml-auto">
                   <div class="dropdown-divider"></div>
-                  <a matTooltip="{{menu.tooltip}}" class="dropdown-item"><img src="assets/app-default/img/baseline-map-24px.svg"/>
+                  <a matTooltip="{{menu.tooltip}}" matTooltipPosition="after" class="dropdown-item"><img src="assets/app-default/img/baseline-map-24px.svg"/>
                     {{menu.name}}
                   </a>
                   <div class="dropdown-divider"></div>
@@ -45,7 +45,7 @@
               <ng-template #internalPage>
                 <div *ngIf="(menu.enabled=='true' || menu.enabled==undefined) && menu.visible!='false'; else internalPageNotEnabled">
                   <li class="nav-item activate .ml-auto">
-                    <a matTooltip="{{menu.tooltip}}" class="dropdown-item" routerLink="/content-page/{{menu.id}}">
+                    <a matTooltip="{{menu.tooltip}}" matTooltipPosition="after" class="dropdown-item" routerLink="/content-page/{{menu.id}}">
                       {{menu.name}}
                     </a>
                     <div class="dropdown-divider"></div>
@@ -54,7 +54,7 @@
                 <ng-template #internalPageNotEnabled>
                   <div *ngIf="menu.enabled=='false' && menu.visible!='false'">
                     <li class="nav-item-not-enabled activate .ml-auto">
-                      <a matTooltip="{{menu.tooltip}}" class="dropdown-item">
+                      <a matTooltip="{{menu.tooltip}}" matTooltipPosition="after" class="dropdown-item">
                         {{menu.name}}
                       </a>
                       <div class="dropdown-divider"></div>
@@ -73,7 +73,7 @@
 <ng-template #simpleContentTab>
   <div *ngIf="data.action=='contentPage' && data.visible!='false' && (data.enabled=='true' || data.enabled==undefined); else simpleContentTabNotEnabled">
     <li class="nav-item activate .ml-auto">
-      <a matTooltip="{{data.tooltip}}" class="nav-link" routerLink="/content-page/{{data.id}}">
+      <a matTooltip="{{data.tooltip}}" matTooltipPosition="below" class="nav-link" routerLink="/content-page/{{data.id}}">
         {{data.name}}
       </a>
     </li>
@@ -81,7 +81,7 @@
   <ng-template #simpleContentTabNotEnabled>
     <div *ngIf="data.action=='contentPage' && data.visible!='false' && data.enabled=='false'; else simpleMapTab">
       <li class="nav-item-not-enabled activate .ml-auto">
-        <a matTooltip="{{data.tooltip}}" class="nav-link">
+        <a matTooltip="{{data.tooltip}}" matTooltipPosition="below" class="nav-link">
           {{data.name}}
         </a>
       </li>
@@ -89,7 +89,7 @@
     <ng-template #simpleMapTab>
       <div *ngIf="data.action=='displayMap' && data.visible!='false' && (data.enabled=='true' || data.enabled==undefined); else simpleMapTabNotEnabled">
       <li class="nav-item activate .ml-auto">
-        <a matTooltip="{{data.tooltip}}" class="nav-link" routerLink="/map/{{data.id}}">
+        <a matTooltip="{{data.tooltip}}" matTooltipPosition="below" class="nav-link" routerLink="/map/{{data.id}}">
           {{data.name}}
         </a>
       </li>
@@ -97,7 +97,7 @@
       <ng-template #simpleMapTabNotEnabled>
         <div *ngIf="data.action=='displayMap' && data.visible!='false' && data.enabled=='false'; else simpleMapTabNotEnabled">
           <li class="nav-item-not-enabled activate .ml-auto">
-            <a matTooltip="{{data.tooltip}}" class="nav-link">
+            <a matTooltip="{{data.tooltip}}" matTooltipPosition="below" class="nav-link">
               {{data.name}}
             </a>
           </li>
