--- a/info-mapper/src/app/map-components/map.component.html
+++ b/info-mapper/src/app/map-components/map.component.html
@@ -16,9 +16,9 @@
       </ul>
 
       <!-- bottom aligned tabs -->
-      <ul role="tablist">
+      <!-- <ul role="tablist"> THIS COMMENTS OUT THE GITHUB LINK FOR THE SIDEBAR
         <li><a title="External link to project on GitHub" href="https://github.com/nickpeihl/leaflet-sidebar-v2"><i class="fa fa-github"></i></a></li>
-      </ul>
+      </ul> -->
     </div>
 
     <!-- panel content -->
@@ -32,68 +32,156 @@
         <br>
 
         <div class="accordion" id="sidebar-accordion">
+
+          <!-- The code commented out below is trying to display each geoLayerViewGroup
+          on the side panel in the order they show up in the config file. The problem so
+          far is some asynchronous issues. -->
+          <!-- <div *ngIf="mapService.getMapConfigFile()">
+            <div *ngFor="let geoLayerViewGroup of mapService.getMapConfigFile().geoMaps[0].geoLayerViewGroups">
+
+              <div *ngIf="geoLayerViewGroup.properties.isBackground == 'false'; else background">
+                
+                <div class="card">
+                  <div class="card-header" id="layerOptions">
+                    <h5 class="mb-0">
+                      <button title="Click to expand/collapse layer controls" class="btn btn-link" type="button" data-toggle="collapse" 
+                        data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        {{geoLayerViewGroup.name}}
+                      </button>
+                    </h5>
+                  </div>
+      
+                  <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#sidebar-accordion">
+                    <div class="card-body">
+                      <table class="layerOptions">
+                        <p style="margin-bottom:5px;"><b><u>Map Controls:</u></b></p>
+                        <div id="toggleAll">
+                          <div class="controlCol">
+                            <button title="Click to show or hide all layers on the map" 
+                              id="display-button" class="toggleAllButton" (click)="displayAll()">
+                              Hide All Layers
+                            </button>
+                          </div>
+                        </div>
+      
+                        <p style="margin-bottom:5px;"><b><u>Legend Controls:</u></b></p>
+                        <div id="toggleDescription">
+                          <div id="controlDescription">
+                            <input title="Show/hide the descriptions under the layer controls" 
+                              type="checkbox" name="showDescriptions" (click)="toggleDescriptions()"> 
+                              Hide All Descriptions
+                          </div>
+                        </div>
+                        <div id="toggleDescription">
+                          <div id="controlDescription">
+                            <input title="Show/hide the symbols under the layer controls" 
+                              type="checkbox" name="showSymbols" (click)="toggleSymbols()"> 
+                              Hide All Symbols
+                          </div>
+                        </div>
+                        <hr>
+      
+                        <ng-template map-layer-hook></ng-template>
+      
+                      </table>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+
+              <ng-template #background>
+                
+                <div class="card">
+                  <div class="card-header" id="background-layers">
+                    <h5 class="mb-0">
+                      <button title="Click to expand/collapse basemap layer tools" class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-two"
+                        aria-expanded="true" aria-controls="collapseOne">
+                        Basemap Layers
+                      </button>
+                    </h5>
+                  </div>
+      
+                  <div id="collapse-two" class="collapse show" aria-labelledby="headingOne" data-parent="#background-layers">
+                    <div class="card-body">
+                      <ng-template background-layer-hook></ng-template>
+                    </div>
+                  </div>
+                </div>
+
+              </ng-template>
+              
+            </div>
+          </div> -->
+
           <div class="card">
-              <div class="card-header" id="layerOptions">
-                <h5 class="mb-0">
-                  <button title="Click to expand/collapse layer controls" class="btn btn-link" type="button" data-toggle="collapse" 
-                    data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Layers
-                  </button>
-                </h5>
-              </div>
 
-              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#sidebar-accordion">
-                <div class="card-body">
-                  <table class="layerOptions">
-                    <p style="margin-bottom:5px;"><b><u>Map Controls:</u></b></p>
-                    <div id="toggleAll">
-                      <div class="controlCol">
-                        <button title="Click to show or hide all layers on the map" 
-                          id="display-button" class="toggleAllButton" (click)="displayAll()">
-                          Hide All Layers
-                        </button>
-                      </div>
+            <div class="card-header" id="layerOptions">
+              <h5 class="mb-0">
+                <button title="Click to expand/collapse layer controls" class="btn btn-link" type="button" data-toggle="collapse" 
+                  data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Layers
+                </button>
+              </h5>
+            </div>
+
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#sidebar-accordion">
+              <div class="card-body">
+                <table class="layerOptions">
+                  <p style="margin-bottom:5px;"><b><u>Map Controls:</u></b></p>
+                  <div id="toggleAll">
+                    <div class="controlCol">
+                      <button title="Click to show or hide all layers on the map" 
+                        id="display-button" class="toggleAllButton" (click)="displayAll()">
+                        Hide All Layers
+                      </button>
                     </div>
+                  </div>
 
-                    <p style="margin-bottom:5px;"><b><u>Legend Controls:</u></b></p>
-                    <div id="toggleDescription">
-                      <div id="controlDescription">
-                        <input title="Show/hide the descriptions under the layer controls" 
-                          type="checkbox" name="showDescriptions" (click)="toggleDescriptions()"> 
-                          Hide All Descriptions
-                      </div>
+                  <p style="margin-bottom:5px;"><b><u>Legend Controls:</u></b></p>
+                  <div id="toggleDescription">
+                    <div id="controlDescription">
+                      <input title="Show/hide the descriptions under the layer controls" 
+                        type="checkbox" name="showDescriptions" (click)="toggleDescriptions()"> 
+                        Hide All Descriptions
                     </div>
-                    <div id="toggleDescription">
-                      <div id="controlDescription">
-                        <input title="Show/hide the symbols under the layer controls" 
-                          type="checkbox" name="showSymbols" (click)="toggleSymbols()"> 
-                          Hide All Symbols
-                      </div>
+                  </div>
+                  <div id="toggleDescription">
+                    <div id="controlDescription">
+                      <input title="Show/hide the symbols under the layer controls" 
+                        type="checkbox" name="showSymbols" (click)="toggleSymbols()"> 
+                        Hide All Symbols
                     </div>
-                    <hr>
+                  </div>
+                  <hr>
 
-                    <ng-template map-layer-hook></ng-template>
+                  <ng-template map-layer-hook></ng-template>
 
-                  </table>
-                </div>
+                </table>
               </div>
             </div>
-            <div class="card">
-              <div class="card-header" id="background-layers">
-                <h5 class="mb-0">
-                  <button title="Click to expand/collapse basemap layer tools" class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-two"
-                    aria-expanded="true" aria-controls="collapseOne">
-                    Basemap Layers
-                  </button>
-                </h5>
-              </div>
 
-              <div id="collapse-two" class="collapse show" aria-labelledby="headingOne" data-parent="#background-layers">
-                <div class="card-body">
-                  <ng-template background-layer-hook></ng-template>
-                </div>
+          </div>
+
+          <div class="card">
+
+            <div class="card-header" id="background-layers">
+              <h5 class="mb-0">
+                <button title="Click to expand/collapse basemap layer tools" class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-two"
+                  aria-expanded="true" aria-controls="collapseOne">
+                  Basemap Layers
+                </button>
+              </h5>
+            </div>
+
+            <div id="collapse-two" class="collapse show" aria-labelledby="headingOne" data-parent="#background-layers">
+              <div class="card-body">
+                <ng-template background-layer-hook></ng-template>
               </div>
             </div>
+            
+          </div>
+
         </div>
 
       </div>
@@ -119,13 +207,6 @@
           <span class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
         </h1>
         <ng-template side-panel-info-host></ng-template>
-        <!-- TESTING HERE -->
-        <script id="address-template" type="text/x-handlebars-template">
-          <p>You can find me in {{city}}. My address is {{number}} {{street}}.</p>
-        </script>
-      
-          <div class="content-placeholder"></div>
-          <!-- TESTING END -->
       </div>
     </div>
   </div>
