--- a/info-mapper/src/app/map-components/legend-symbols/legend-symbols.component.html
+++ b/info-mapper/src/app/map-components/legend-symbols/legend-symbols.component.html
@@ -5,7 +5,7 @@
     <div *ngIf="this.symbolData.classificationType.toUpperCase() == 'SINGLESYMBOL'">
       <div *ngFor="let symbolName of singleSymbolKeyNames; let num = index">
         <!-- LINE -->
-        <div *ngIf="this.layerData.geometryType.includes('LineString')">
+        <div *ngIf="this.geometryType.includes('LineString')">
           <svg class="layer-icon" height="10" width="25">
             <line x1="5" y1="5" x2="25" y2="5" [ngStyle]="{'stroke':symbolData.properties.color}" style="stroke-width:2" />
           </svg>
