--- a/info-mapper/src/app/map-components/map-layer-control/map-layer.component.html
+++ b/info-mapper/src/app/map-components/map-layer-control/map-layer.component.html
@@ -2,22 +2,22 @@
   <td class="name">
 
     <div id="layer-title">
-      {{layerData.name}} 
+      {{layerViewData.name}} 
     </div>
 
-    <div class="description" id="description-{{layerData.geoLayerId}}">{{layerData.description}}</div>
+    <div class="description" id="description-{{layerViewData.geoLayerId}}">{{layerViewData.description}}</div>
 
     <br>
 
-    <div class="symbols" id="symbols-{{layerData.geoLayerId}}">
+    <div class="symbols" id="symbols-{{layerViewData.geoLayerId}}">
       <ng-template legend-symbol-hook></ng-template>
     </div>
   </td>
 
   <td class="toggle">
-    <label title="Show/hide '{{layerData.name}}' layer on the map"  class="switch">
+    <label title="Show/hide '{{layerViewData.name}}' layer on the map"  class="switch">
 
-      <input id="{{layerData.geoLayerId}}-slider" type="checkbox" (click)="toggleLayer()" checked="checked">
+      <input id="{{layerViewData.geoLayerId}}-slider" type="checkbox" (click)="toggleLayer()" checked="checked">
       <span class="slider round"></span>
       </label>
     </td>
