--- a/info-mapper/src/app/nav-bar/nav-bar.component.html
+++ b/info-mapper/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,6 @@
 <nav class="navbar navbar-expand-xl navbar-light bg-light py-0">
+  <!-- TODO: jpkeahey 2020.05.25 - What should this display for the home
+    button in the upper left? Keep with title, or something else? -->
   <a class="navbar-brand" routerLink="/content-page/home">{{title}}</a>
 
   <!-- Hamburger Icon -->
