--- a/info-mapper/src/app/map-components/legend-symbols/legend-symbols.component.html
+++ b/info-mapper/src/app/map-components/legend-symbols/legend-symbols.component.html
@@ -52,7 +52,7 @@
           <!-- <b>Categorized by {{categorizedClassificationField[num]}}:</b> -->
           <div *ngFor="let categorizedKeyColor of categorizedKeyColors[num]; let num2 = index">
             <div *ngIf="(num2%2) == 0">
-              <!-- Square will be default for polygons -->
+              <!-- SQUARE will be default for polygons -->
               <svg width="18" height="18">
                 <rect width="18" height="18" [ngStyle]="{'fill':categorizedKeyColors[num][num2 + 1]}" />
               </svg>
