--- a/info-mapper/src/app/map-components/map.component.css
+++ b/info-mapper/src/app/map-components/map.component.css
@@ -1,21 +1,49 @@
-/* <<<<<<< HEAD */
-#mapid {
-    position: absolute;
-    width:100%!important;
-    height:100%!important;
+/* GENERAL */
+body, html {
+  background: black;
 }
 
-#map-container {
-    position: relative;
-    float: right;
-    width:100%;
-    height: calc(100vh - 57px);
+header h1 {
+	text-align: center;
+}
+
+/* CLASSES */
+#controlDescription {
+  text-align: left;
+  margin-bottom: 10px;
 }
 
 #errorPage {
   font-size: 30px;
   text-align: center;
   margin-top: 100px;
+}
+
+#exit {
+	cursor: pointer;
+}
+
+#externalLink {
+	text-decoration: underline;
+	color:#0078A8;
+	cursor: pointer;
+}
+
+#mapid {
+  position: absolute;
+  width:100%!important;
+  height:100%!important;
+}
+
+#map-container {
+  position: relative;
+  float: right;
+  width:100%;
+  height: calc(100vh - 57px);
+}
+
+#open-window {
+	cursor: pointer;
 }
 
 #toggleAll {
@@ -27,27 +55,38 @@
   width: 100%;
 }
 
-#controlDescription {
-  text-align: left;
-  margin-bottom: 10px;
+iframe {
+	height: 95%;
+	width: 100%;
+	display: block;
+	overflow: auto;
 }
 
-#externalLink {
-	text-decoration: underline;
-	color:#0078A8;
-	cursor: pointer;
+/* ID's */
+.btn-link {
+	color:white;
 }
 
-#exit {
-	cursor: pointer;
+.btn-link:hover{
+	color:white;
+	text-decoration:none;
 }
 
-#open-window {
-	cursor: pointer;
+.btn-link:focus{
+	color:white;
+	text-decoration:none;
 }
 
-header h1 {
-	text-align: center;
+.card-body {
+	width: 100%;
+}
+
+.card-header {
+	background: #9DB66B;
+}
+
+.card-header-map-controls {
+	background: #9DB66B;
 }
 
 .info {
@@ -82,103 +121,6 @@ header h1 {
 	margin-bottom: 0px;
 }
 
-.popup {
-	width:550px;
-	height:400px;
-	padding: 6px 8px;
-	font: 14px/16px Arial, Helvetica, sans-serif;
-	background: white;
-	box-shadow: 0 0 15px rgba(0,0,0,0.2);
-	border-radius: 5px;
-	resize: both;
-}
-
-.popup-info {
-	padding: 6px 8px;
-	font: 14px/16px Arial, Helvetica, sans-serif;
-	background: white;
-	box-shadow: 0 0 15px rgba(0,0,0,0.2);
-	border-radius: 5px;
-	height: 100px;
-	width: 150px;
-}
-
-iframe {
-	height: 95%;
-	width: 100%;
-	display: block;
-	overflow: auto;
-}
-
-
-.toggleAllButton {
-  display:inline-block;
-  padding:0.35em 1.2em;
-  margin:0 0.3em 0.3em 0;
-
-  border-radius: 2px;
-  border-style: solid;
-  border-color: #9DB66B;
-
-  text-decoration:none;
-  font-size: 14px;
-  font-weight:300;
-
-  background-color: #9DB66B;
-  color: white;
-
-  text-align:center;
-}
-
-.toggleAllButton:hover {
-  cursor: pointer;
-  background-color: white;
-  color: #9DB66B;
-  border-style: solid;
-  border-color: #9DB66B;
-  box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
-}
-
-.card-header {
-	background: #9DB66B;
-}
-
-.btn-link {
-	color:white;
-}
-.btn-link:hover{
-	color:white;
-	text-decoration:none;
-}
-.btn-link:focus{
-	color:white;
-	text-decoration:none;
-}
-
-.map-title {
-  padding: 6px 8px;
-  font: 14px/16px Arial, Helvetica, sans-serif;
-  background: #DCDCDC;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  border-radius: 5px;
-  height:100px;
-}
-
-/* animation tools */
-.slidercontainer { 
-	padding: 5px 2px;
-	font: 14px/20px Arial, Helvetica, sans-serif; 
-	background: white;  
-	box-shadow: 0 0 15px rgba(0,0,0,0.2); 
-	border-radius: 5px; 
-	width:590px;
-	margin-bottom:25px!important;
-} 
-.slidercontainer h4 { 
-	margin: 5px 0; 
-	color: black; 
-}
-
 /* Style for sidebar */
 .leaflet-sidebar-tabs > ul 
 > li.active {
@@ -205,10 +147,36 @@ iframe {
 	margin-left:7px!important;
 }
 
-body,
-html {
-  background: black;
+.map-title {
+  padding: 6px 8px;
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: #DCDCDC;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  height:100px;
 }
+
+.popup {
+	width:550px;
+	height:400px;
+	padding: 6px 8px;
+	font: 14px/16px Arial, Helvetica, sans-serif;
+	background: white;
+	box-shadow: 0 0 15px rgba(0,0,0,0.2);
+	border-radius: 5px;
+	resize: both;
+}
+
+.popup-info {
+	padding: 6px 8px;
+	font: 14px/16px Arial, Helvetica, sans-serif;
+	background: white;
+	box-shadow: 0 0 15px rgba(0,0,0,0.2);
+	border-radius: 5px;
+	height: 100px;
+	width: 150px;
+}
+
 .resizable {
   background: white;
   /* width: 100px;
@@ -243,6 +211,49 @@ html {
   left: -14px;
   /* top: -14px; */
   cursor: nwse-resize; /*resizer cursor*/
+}
+
+/* animation tools */
+.slidercontainer { 
+	padding: 5px 2px;
+	font: 14px/20px Arial, Helvetica, sans-serif; 
+	background: white;  
+	box-shadow: 0 0 15px rgba(0,0,0,0.2); 
+	border-radius: 5px; 
+	width:590px;
+	margin-bottom:25px!important;
+} 
+.slidercontainer h4 { 
+	margin: 5px 0; 
+	color: black; 
+}
+
+.toggleAllButton {
+  display:inline-block;
+  padding:0.35em 1.2em;
+  margin:0 0.3em 0.3em 0;
+
+  border-radius: 2px;
+  border-style: solid;
+  border-color: #9DB66B;
+
+  text-decoration:none;
+  font-size: 14px;
+  font-weight:300;
+
+  background-color: #9DB66B;
+  color: white;
+
+  text-align:center;
+}
+
+.toggleAllButton:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #9DB66B;
+  border-style: solid;
+  border-color: #9DB66B;
+  box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
 }
 
 /* Styling for actual slider */
