Issue #132 taken care of

--- a/info-mapper/src/app/map-components/background-layer-control/background-layer.component.html
+++ b/info-mapper/src/app/map-components/background-layer-control/background-layer.component.html
@@ -1,5 +1,5 @@
 <tr>
-  <input type="radio" id="{{data.geoLayerId}}-radio" name="background-layer" value="{{data.name}}" (click)="selectBackgroundLayer()">
+  <input type="radio" id="{{data.name}}-radio" name="background-layer" value="{{data.name}}" (click)="selectBackgroundLayer()">
   <td class="name">
     <b>{{data.name}}</b>
     <div class="description">{{data.description}}</div>
