Started popup buttons, added error checking, kept working on #119

--- a/info-mapper/src/app/map-components/map.component.html
+++ b/info-mapper/src/app/map-components/map.component.html
@@ -100,7 +100,8 @@
                         <hr class="divider">
                         
                         <div map-layer-hook
-                              [layerViews]="geoLayerViewGroup.geoLayerViews.length"></div>
+                              [layerViews]="geoLayerViewGroup.geoLayerViews.length"
+                              [realLayerViews]="this.realLayerViews"></div>
 
                       </table>
                     </div>
