Updated time series event handler graph

--- a/info-mapper/src/app/map-components/dialog-content/dialog-content.html
+++ b/info-mapper/src/app/map-components/dialog-content/dialog-content.html
@@ -5,10 +5,10 @@
       cdkDragHandle>
 
   <h1 mat-dialog-title>
-    Graph Name
+    {{mainTitleString}}
   </h1>
 
-  <canvas id="myChart" width="400" height="400"></canvas>
+  <canvas id="myChart" width="900" height="500"></canvas>
 
   <div mat-dialog-actions>
     <button mat-button (click)="onClose()">
