Slightly updated the graph legend, and updated leaflet popup buttons

--- a/info-mapper/src/app/map-components/dialog-content/dialog-content.html
+++ b/info-mapper/src/app/map-components/dialog-content/dialog-content.html
@@ -10,7 +10,7 @@
   <canvas id="myChart" width="900" height="500"></canvas>
 
   <div mat-dialog-actions>
-    <button mat-button (click)="onClose()">
+    <button mat-raised-button (click)="onClose()">
       Close
     </button>
   </div>
